# JVM-Bridge

./: .gitignore  Makefile  README.md
javavm/: Makefile  javavm.cabal
javavm-interface/: Building  Building.win32
javavm-interface/Haskell/: .gitignore  Makefile  Setup.hs  javavm-interface.cabal.m4
javavm-interface/Haskell/Foreign/JavaVM/: Configure.hs.m4  Raw.hs  VM.hs
javavm-interface/Haskell/Foreign/JavaVM/Raw/: Callback.hs  Env.hs  Invocation.hs  Types.hs  VM.hs  ValueList.hs
javavm-interface/Haskell/Foreign/JavaVM/VM/: Array.hs  Callback.hs  Class.hs  Field.hs  Invocation.hs  Method.hs  NewObject.hs  Object.hs  Ref.hs  String.hs  StringPtr.hs  Thread.hs  Throwable.hs  Types.hs  ValueList.hs  Witness.hs
javavm-interface/Haskell/Foreign/JavaVM/VM/Callback/: Constructor.hs  Field.hs  Finalizer.hs  Method.hs
javavm-interface/Haskell/Foreign/JavaVM/VM/Field/: Access.hs  ID.hs
javavm-interface/Haskell/Foreign/JavaVM/VM/Method/: Call.hs
javavm-interface/Haskell/cbits/: HsExecuteFunction.c
javavm-interface/Haskell/include/: HsExecuteFunction.h
javavm-interface/Haskell/test/: .gitignore  Makefile  TestException.ref
javavm-interface/Haskell/test/Exception/: Exception.cabal  Exception.hs  Makefile
javavm-interface/Haskell/test/HelloWorld/: HelloWorld.cabal  HelloWorld.hs  Makefile
javavm-interface/Native/: .gitignore  1_1.Blackdown.green_threads.linux.jvm  1_3.Blackdown.classic.green_threads.linux.jvm  AUTHORS  ChangeLog  Configure.h  Darwin.jvmdirs  Debug.hpp  ExecuteFunction.cpp  ExecuteFunction.java-pp  ExecuteFunctionControl.h  File.cpp  File.hpp  FindClasses.cpp  IBM.classic.jvm  INSTALL  JVMBridge.cpp  JVMBridge.h  JVMInvocation.cpp  JVMInvocation.h  Makefile.am  OpenJDK.6.jvm  OpenJDK.6.jvmdirs  OpenJDK.7.jvm  ResourceLoader.java  ResourceRepository.java  SableVM.jvm  ShowFrame.java  Sun.classic.native_threads.linux.jvmdirs  Sun.client.linux.jvm  TestApp.java-pp  TestFile.cpp  TestJVM  TestJVMBridge.cpp  ValueList.cpp  ValueList.h  ValueListPrivate.hpp  configure.ac  configure.in  jinfo2jvm
javavm-interface/Native/share/: 1_1.Blackdown.green_threads.linux.jvmdirs  1_1.IBM.native_threads.linux.jvm  1_1.IBM.native_threads.linux.jvmdirs  1_3.Blackdown.classic.native_threads.linux.jvm  Darwin.jvm  FreeBSD.jvm  GCJ.jvm  IBM.classic.debug.jvm  IBM.classic.debug.jvmdirs  Kaffe.jvm  Kaffe.jvmdirs  OpenJDK.7.jvmdirs  Sun.6.jvm  Sun.classic.green_threads.linux.jvm  Sun.classic.native_threads.linux.jvm  Sun.client.win32.jvm  Sun.client.win32.jvmdirs  Sun.server.linux.jvm  Sun.server.linux.jvmdirs  Sun.server.win32.jvm  Sun.server.win32.jvmdirs  jvm.list
javavm-interface/Native/win32/: Makefile.am  jvm.def
javavm-typed/: .gitignore  ChangeLog  Class.m4  Header.m4  INSTALL  JVM.m4  Java.allowedclasses  JavaX.allowedclasses  LibPackage.m4  LibPackages.m4  MakeClassModule.m4  MakeHeaderModule.m4  MakeJVMModule.m4  Makefile  Misc.allowedclasses  OMG.allowedclasses  Package.m4  ShowClasses.hs  Sun.allowedclasses  TestCallback.hs  TestFrame.hs  TestJVM.hs  TestStuff.hs  cabal.m4
javavm-typed/Foreign/: JavaVM.hs
javavm-typed/Foreign/JavaVM/: Callback.hs  Invocation.hs.m4  Thread.hs  Typed.hs
javavm-typed/Foreign/JavaVM/Lib/: Header.hs
javavm-typed/Foreign/JavaVM/Typed/: ArgumentList.hs  Array.hs  Callback.hs  Class.hs  Field.hs  Invocation.hs  ListArray.hs  Loadable.hs  Method.hs  NewObject.hs  Object.hs  Primitive.hs  Reference.hs  Returnable.hs  String.hs  Thread.hs  Throwable.hs  Tuple.hs  Value.hs
javavm-typed/test/: HelloWorld.hs  HelloWorld_JVM.list  InterfaceMyClass.hs  InterfaceMyClass.ref  JTestException.java  Makefile  MyClass.java  MyOtherClass.java  ShowEmptyFrame.hs  ShowEmptyFrame_JVM.list  ShowFrame.hs  ShowFrame_JVM.list  TestCallback.hs  TestCallback_JVM.list  TestException.hs  TestException.ref  TestException_JVM.list
javavm/Control/Monad/: Loop.hs  Reference.hs
javavm/Data/: Bytes.hs  Nothing.hs  Subtype.hs
javavm/Platform/: JavaVM.hs
javavm/Platform/JavaVM/: Compile.hs  Types.hs
javavm/Platform/JavaVM/Compile/: Attribute.hs  CodeInstruction.hs  ConstantPool.hs  Definition.hs  Format.hs  Writable.hs
javavm/Platform/JavaVM/Types/: Text.hs  TypeSig.hs  Types.hs  Witness.hs
mk/: common.mk  current.jvm.mk  simple-test.mk
